--- a/HierArch/HierArch.csproj
+++ b/HierArch/HierArch.csproj
@@ -116,6 +116,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Base\HAMacroForm.cs"
+                    SubType = "Form"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Base\HAViewInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
