--- a/GirlLib/GirlLib.csproj
+++ b/GirlLib/GirlLib.csproj
@@ -117,6 +117,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Girl\Coding\CodeWriter.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Girl\Coding\CParserBase.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -243,11 +248,6 @@
                 />
                 <File
                     RelPath = "Girl\Xml\XmlParser.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "Src\CodeWriter.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
